--- a/css/style.css
+++ b/css/style.css
@@ -402,6 +402,10 @@ body {
   margin-top: 3.2%;
 }
 
+.imgLogo {
+  max-width: 100%;
+  height: auto;
+}
 .btnSuiteReservar {
   background-color: #D3B167;
   color: white;
