--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,12 @@ body {
   background-size: cover;
 }
 
+@media (max-width:1380px) {
+  .head {
+    background-size: 100% 100%;
+  }
+}
+
 /* .menu {grid-area: menu;} */
 .login {
   grid-area: login;
@@ -97,7 +103,7 @@ body {
 }
 
 .container2 {
-  max-width: 100%;
+  max-width: 1000px;
   margin: 40px auto;
   height: 100vh;
   text-align: center;
@@ -210,9 +216,8 @@ body {
 }
 
 .gandhiImg {
-  float: left;
-  max-width: 110%;
-  margin-top: 49%;
+  height: 100vh;
+  max-width: 120%;
 }
 
 .culture h1 {
@@ -237,7 +242,7 @@ body {
 .textCult {
   color: white;
   font-family: lato;
-  overflow-y: scroll;
+  overflow: hidden;
   height: 150px;
 }
 
@@ -279,11 +284,18 @@ body {
 .icons i {
   color: white;
   cursor: pointer;
-  padding: 0 14px;
+  margin-left: 0.5%;
+  padding: 0 12px;
+  font-size: 1.8rem;
 }
 
 .icons i:hover {
   color: #118806;
+}
+
+iframe {
+  border: none;
+  overflow-y: scroll;
 }
 
 .information {
